--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "framer-motion": "^11.5.6",
+    "gsap": "file:gsap-bonus.tgz",
+    "lenis": "^1.1.13",
+    "lucide-react": "^0.445.0",
+    "next": "14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
