--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.18.0",
     "framer-motion": "^11.5.6",
     "gsap": "file:gsap-bonus.tgz",
     "lenis": "^1.1.13",
