--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@motionone/utils": "^10.18.0",
+    "flickity": "^3.0.0",
     "framer-motion": "^11.5.6",
     "gsap": "file:gsap-bonus.tgz",
     "lenis": "^1.1.13",
