--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@motionone/utils": "^10.18.0",
+    "@react-three/drei": "^9.114.0",
+    "@react-three/fiber": "^8.17.8",
     "flickity": "^3.0.0",
     "framer-motion": "^11.5.6",
     "gsap": "file:gsap-bonus.tgz",
@@ -17,7 +19,8 @@
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18.3.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.168.0"
   },
   "devDependencies": {
     "eslint": "^8",
