--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@motionone/utils": "^10.18.0",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
+    "embla-carousel-auto-scroll": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "flickity": "^3.0.0",
     "framer-motion": "^11.5.6",
     "gsap": "file:gsap-bonus.tgz",
