--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-react": "^8.3.0",
     "flickity": "^3.0.0",
     "framer-motion": "^11.5.6",
+    "git": "^0.1.5",
     "gsap": "file:gsap-bonus.tgz",
     "lenis": "^1.1.13",
     "lucide-react": "^0.445.0",
