--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "file:gsap-bonus.tgz",
     "lenis": "^1.1.13",
     "lucide-react": "^0.445.0",
+    "motion-number": "^0.1.7",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18",
