--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "vecteur": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
